apps/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
    spec:
      priorityClassName: homelab-standard
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
          ports:
            - name: http
              containerPort: 5055
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 768Mi
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
