apps/media/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
