apps/media/seerr/overseerr-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-redirect
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://seerr.worm.run
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - overseerr.worm.run
  rules:
    - host: overseerr.worm.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  name: http
